# Interference-Graph-Generator

./: .gitignore  .gitmodules  CMakeLists.txt  DLOG Coloring Proposal Presentation.pptx  Makefile  README.md  TODO List  output  outputll
IG_Gen/: CMakeLists.txt  DOCS.txt  Makefile  NEW_Makefile  OLD_Makefile  compile_to_ir.sh  generate_IG.sh  generate_IR  generate_IR.cpp  get_graph_stats.py  mem2reg_proc  mem2reg_proc.c  run_generator.sh  runscript.py  test-mem2reg.ll  test-mem2reg_@sum.txt  test.c  test.ll  test2-mem2reg.ll  test2.ll
IG_Gen/DATASETv2/: codellama_13b-10802.ll  codellama_13b-4002.c  falcon180b-10291-mem2reg.ll  falcon180b-23186.c  falcon180b-26620.ll  falcon180b-40277.c  falcon180b-43363.c  falcon180b-46287.c  falcon180b-52077.c  falcon180b-5334.ll  falcon180b-55395.ll  falcon180b-55727.c  falcon180b-60071.c  falcon180b-63675.c  falcon180b-69941.c  falcon2-11B-11442.ll  falcon2-11B-11879-mem2reg.ll  falcon2-11B-2586.c  falcon2-11B-3074.ll  falcon2-11B-8713-mem2reg.ll  gemini_pro-10681-mem2reg.ll  gemini_pro-12704.c  gemini_pro-17999.c  gemini_pro-22615.c  gemma7b-24778.c  (+34 more)
Org/: CMakeLists.txt  TODO List
Reports and Slides/: final_report.md
graph-viz/: graph-viz.py
include/: aligned_realloc.h  bitset_ops.h  generate_IR.h  graph_algs.h  helper_structs.h  init.h  io_ops.h  master.h  state_machine.h
src/: aligned_realloc.cpp  aligned_realloc.h  bitset_ops.cpp  bitset_ops.h  environment.yaml  generate_IR.cpp  generate_IR.h  get_graph_stats.py  graph_algs.cpp  graph_algs.h  init.cpp  io_ops.cpp  io_ops.h  main.cpp  state_machine.cpp  state_machine.h
(+934 files in other folders)
